--- a/src/css/app.css
+++ b/src/css/app.css
@@ -519,26 +519,85 @@ ul {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media (min-width: 1024px) {
-  .projects__grid {
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-@media (min-width: 1200px) {
-  .projects__grid {
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
 
 .project {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 2rem;
   border-radius: 0.8rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+@media (min-width: 768px) {
+  .project {
+    grid-template-columns: 1fr 2fr;
+  }
+}
+.project__image {
+  border-radius: 0.5rem;
+  border: 0.2rem solid transparent;
+  transition: border-color 0.3s;
+  object-fit: cover;
+}
+.project__image:hover {
+  border-color: #7743DB;
+  cursor: pointer;
+}
+.project__title {
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Titillium Web", sans-serif;
+  letter-spacing: 0.2rem;
+  font-weight: 900;
+  text-wrap: wrap;
+  font-size: 2.4rem;
+  background-image: linear-gradient(to bottom right, #7743db, #966ee3, #ffb100 85%);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+.project__description {
+  margin: 1rem 0;
+  line-height: 1.6;
+  text-align: center;
+}
+.project__links {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+.project__link {
+  color: #7743DB;
+  transition: color 0.3s;
+  margin: 1rem 0;
+}
+.project__link svg {
+  width: 3rem;
+  height: 3rem;
+}
+.project__link:hover {
+  color: #966ee3;
+}
+.project__info-demo {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+.project__info-demo span {
+  color: #7743DB;
+}
+.project__footer {
+  grid-column: 1/3;
+}
+.project__tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .footer {
