--- a/src/css/app.css
+++ b/src/css/app.css
@@ -552,13 +552,8 @@ ul {
   font-weight: 900;
   text-wrap: wrap;
   font-size: 2.4rem;
-  background-image: linear-gradient(to bottom right, #7743db, #966ee3, #ffb100 85%);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  color: transparent;
-  background-clip: text;
-  -webkit-background-clip: text;
+  color: #7743DB;
+  border-bottom: 0.2rem solid #FFB100;
 }
 .project__description {
   margin: 1rem 0;
@@ -598,6 +593,17 @@ ul {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  margin-top: 1rem;
+}
+.project__tag {
+  background-color: hsl(260, 67%, 56%);
+  background-image: radial-gradient(at 85% 49%, hsl(260, 67%, 56%) 0px, transparent 50%), radial-gradient(at 89% 1%, hsl(41, 100%, 50%) 0px, transparent 50%), radial-gradient(at 0% 50%, hsl(260, 67%, 56%) 0px, transparent 50%), radial-gradient(at 40% 59%, hsl(41, 100%, 50%) 0px, transparent 50%), radial-gradient(at 0% 100%, hsl(260, 67%, 56%) 0px, transparent 50%);
+  border-radius: 1rem;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .footer {
