--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -49,18 +49,8 @@
     font-weight: v.$black;
     text-wrap: wrap;
     font-size: 2.4rem;
-    background-image: linear-gradient(
-      to bottom right,
-      #7743db,
-      #966ee3,
-      #ffb100 85%
-    );
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    color: transparent;
-    background-clip: text;
-    -webkit-background-clip: text;
+    color: v.$purple;
+    border-bottom: 0.2rem solid v.$yellow;
   }
 
   &__description {
@@ -108,5 +98,26 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
+    margin-top: 1rem;
+  }
+
+  &__tag {
+    background-color: hsla(260, 67%, 56%, 1);
+    background-image: radial-gradient(
+        at 85% 49%,
+        hsla(260, 67%, 56%, 1) 0px,
+        transparent 50%
+      ),
+      radial-gradient(at 89% 1%, hsla(41, 100%, 50%, 1) 0px, transparent 50%),
+      radial-gradient(at 0% 50%, hsla(260, 67%, 56%, 1) 0px, transparent 50%),
+      radial-gradient(at 40% 59%, hsla(41, 100%, 50%, 1) 0px, transparent 50%),
+      radial-gradient(at 0% 100%, hsla(260, 67%, 56%, 1) 0px, transparent 50%);
+
+    border-radius: 1rem;
+    color: v.$white;
+    padding: 0.5rem 1rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-transform: uppercase;
   }
 }
