--- a/src/css/app.css
+++ b/src/css/app.css
@@ -607,6 +607,38 @@ ul {
   text-transform: uppercase;
 }
 
+.contact {
+  margin: 3rem auto;
+}
+.contact__heading {
+  text-align: center;
+  margin: 3rem 0;
+  font-size: clamp(3rem, 6vw, 6rem);
+  font-family: "Titillium Web", sans-serif;
+  font-weight: 900;
+  color: #fff;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+}
+.contact__heading::after {
+  content: "• • •";
+  display: block;
+  color: #FFB100;
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+@media (min-width: 768px) {
+  .contact__heading::after {
+    margin-top: -2rem;
+  }
+}
+.contact__form {
+  width: 80%;
+  max-width: 90rem;
+  margin: 0 auto;
+}
+
 .footer {
   text-align: center;
   background-color: #16092f;
