--- a/src/css/app.css
+++ b/src/css/app.css
@@ -607,6 +607,104 @@ ul {
   text-transform: uppercase;
 }
 
+.extra {
+  margin: 3rem auto;
+}
+.extra__heading {
+  text-align: center;
+  margin: 3rem 0;
+  font-size: clamp(3rem, 6vw, 6rem);
+  font-family: "Titillium Web", sans-serif;
+  font-weight: 900;
+  color: #fff;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+}
+.extra__heading::after {
+  content: "• • •";
+  display: block;
+  color: #FFB100;
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+@media (min-width: 768px) {
+  .extra__heading::after {
+    margin-top: -2rem;
+  }
+}
+.extra__grid {
+  width: 90%;
+  max-width: 120rem;
+  margin: 0 auto;
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(1, 1fr);
+}
+@media (min-width: 768px) {
+  .extra__grid {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 1024px) {
+  .extra__grid {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.extra__project {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 2rem;
+  border-radius: 0.8rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+.extra__header {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.extra__title {
+  text-transform: uppercase;
+  font-family: "Titillium Web", sans-serif;
+  letter-spacing: 0.1rem;
+  text-wrap: wrap;
+  color: #7743DB;
+}
+.extra__link {
+  color: #7743DB;
+  transition: color 0.3s;
+}
+.extra__link:hover {
+  color: #5c26c5;
+}
+.extra__description {
+  margin: 1rem 0;
+  line-height: 1.6;
+}
+.extra__footer {
+  grid-column: 1/3;
+}
+.extra__tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+.extra__tag {
+  background-color: hsl(260, 67%, 56%);
+  background-image: radial-gradient(at 85% 49%, hsl(260, 67%, 56%) 0px, transparent 50%), radial-gradient(at 89% 1%, hsl(41, 100%, 50%) 0px, transparent 50%), radial-gradient(at 0% 50%, hsl(260, 67%, 56%) 0px, transparent 50%), radial-gradient(at 40% 59%, hsl(41, 100%, 50%) 0px, transparent 50%), radial-gradient(at 0% 100%, hsl(260, 67%, 56%) 0px, transparent 50%);
+  border-radius: 1rem;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 .contact {
   margin: 3rem auto;
 }
