--- a/src/sass/components/_extra.scss
+++ b/src/sass/components/_extra.scss
@@ -6,6 +6,17 @@
 
   &__heading {
     @include m.heading;
+
+    &--extra{
+      @extend .extra__heading;
+      font-size: clamp(2.5rem, 5vw, 4.5rem);
+      opacity: .8;
+
+      &::after{
+        color: v.$purple;
+        opacity: .8;
+      }
+    }
   }
 
   &__grid {
@@ -15,24 +26,30 @@
     @include m.tablet {
       @include m.grid(2, 2rem);
     }
-
-    @include m.desktop {
-      @include m.grid(3, 2rem);
-    }
   }
 
-  &__project{
+  &__project {
     @include m.card;
+    border: .5rem solid transparent;
+    border-top: 0.5rem solid v.$yellow;
+    transition: border-color 0.3s;
+
+    &:hover{
+        border-color: v.$yellow
+    }
+
+    &:focus-visible{
+      outline: none;
+    }
+
+    &:active{
+      color: #551A8B;
+    }
+
   }
 
-  &__header{
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-    margin-bottom: 1rem;
-  }
 
-  &__title{
+  &__title {
     text-transform: uppercase;
     font-family: v.$fontTitillium;
     letter-spacing: 0.1rem;
@@ -40,16 +57,8 @@
     color: v.$purple;
   }
 
-  &__link{
-    color: v.$purple;
-    transition: color 0.3s;
 
-    &:hover{
-      color: darken(v.$purple, 10%);
-    }
-  }
-
-  &__description{
+  &__description {
     margin: 1rem 0;
     line-height: 1.6;
   }
@@ -84,6 +93,4 @@
     font-weight: bold;
     text-transform: uppercase;
   }
-
-
 }
