--- a/src/css/app.css
+++ b/src/css/app.css
@@ -660,51 +660,44 @@ ul {
   width: 90%;
   max-width: 120rem;
   margin: 0 auto;
-  display: grid;
-  gap: 2rem;
-  grid-template-columns: repeat(1, 1fr);
-}
-@media (min-width: 768px) {
-  .extra__grid {
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(2, 1fr);
-  }
 }
 .extra__project {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 2rem;
   border-radius: 0.8rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  text-align: center;
   border: 0.5rem solid transparent;
   border-top: 0.5rem solid #FFB100;
   transition: border-color 0.3s;
 }
-.extra__project:hover {
-  border-color: #FFB100;
-}
-.extra__project:focus-visible {
-  outline: none;
-}
-.extra__project:active {
-  color: #551A8B;
-}
 .extra__title {
   text-transform: uppercase;
   font-family: "Titillium Web", sans-serif;
-  letter-spacing: 0.1rem;
-  text-wrap: wrap;
+  letter-spacing: 0.2rem;
+  font-size: 2.4rem;
+  margin-bottom: 1rem;
   color: #7743DB;
+  font-weight: 900;
+  border-bottom: 0.3rem solid #FFB100;
+}
+.extra__link {
+  text-decoration: none;
+  display: inline-block;
+  margin-bottom: 1rem;
+  color: #7743DB;
+  transition: color 0.3s;
+}
+.extra__link:hover {
+  color: #b599eb;
 }
 .extra__description {
-  margin: 1rem 0;
-  line-height: 1.6;
-}
-.extra__footer {
-  grid-column: 1/3;
+  line-height: 1.5;
+  margin-bottom: 2rem;
 }
 .extra__tags {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
   margin-top: 1rem;
@@ -718,6 +711,15 @@ ul {
   font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.swiper-wrapper {
+  box-sizing: inherit !important;
+}
+
+.swiper-button-next, .swiper-button-prev {
+  color: #7743DB !important;
+  opacity: 0.5 !important;
 }
 
 .contact {
