--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -74,5 +74,10 @@
     display: inline-block;
     margin: 0 0 0 1rem;
     color: v.$yellow;
+    transition: color 0.3s;
+
+    &:hover{
+      color: darken(v.$yellow, 10%);
+    }
   }
 }
