--- a/src/css/app.css
+++ b/src/css/app.css
@@ -756,13 +756,28 @@ ul {
   }
 }
 .contact__form {
-  width: 80%;
-  max-width: 90rem;
+  width: 90%;
+  max-width: 120rem;
   margin: 0 auto;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 2rem;
   border-radius: 0.8rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  transition: all 0.3s;
+}
+@media (min-width: 768px) {
+  .contact__form {
+    width: 85%;
+    max-width: 100rem;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1024px) {
+  .contact__form {
+    width: 80%;
+    max-width: 90rem;
+    margin: 0 auto;
+  }
 }
 .contact__legend, .contact__legend--fieldset {
   text-transform: uppercase;
