--- a/src/css/app.css
+++ b/src/css/app.css
@@ -455,6 +455,7 @@ ul {
   padding: 2rem;
   border-radius: 0.8rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  padding: 0;
   border-top: 0.5rem solid #7743DB;
   border-bottom: 0.5rem solid #FFB100;
   border-right: 0.5rem solid #FFB100;
