--- a/src/css/app.css
+++ b/src/css/app.css
@@ -538,6 +538,13 @@ ul {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+@media (min-width: 1024px) {
+  .projects__grid {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 
 .project {
   background-color: rgba(255, 255, 255, 0.8);
