--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -15,6 +15,10 @@
     @include m.tablet {
       @include m.grid(2, 2rem);
     }
+
+    @include m.desktop {
+      @include m.grid(3, 2rem);
+    }
   }
 }
 
